--- a/src/styles/config/vars.sass
+++ b/src/styles/config/vars.sass
@@ -2,12 +2,12 @@
  * Reusable values
  */
 
-$red: md-color('red', '600')
+$purple: md-color('deep-purple')
 $black: md-color('grey', '900')
 $offwhite: md-color('grey', '100')
 $white: #FFF
 
-$primary: $red
+$primary: $purple
 
 $base-unit: 8px
 $base-spacing: 2 * $base-unit
